// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CREATE MODE if form changesupdate the preview card: changed value should be present in the preview 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main"
  >
    <div
      class="StyledProps--font StyledProps--main basicDetails StyledProps--background-form StyledProps--padding-huge"
      style="width: 55%;"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey800 StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--margin-bottom-xlarge"
      >
        Some Title
      </p>
      <div
        class="OverlaySpinner--overlaySpinner"
      >
        <form
          action="#"
          class="FormikForm--main"
        >
          <div>
            <div
              class="Layout--vertical Layout--layout-spacing-huge StyledProps--main"
            >
              <div
                class="StyledProps--font StyledProps--main gitFormWrapper"
              >
                <div
                  class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
                >
                  <div
                    class="StyledProps--font StyledProps--main"
                  >
                    <div
                      class="Layout--vertical StyledProps--main"
                    >
                      <div
                        class="StyledProps--font StyledProps--main main nameIdDescriptionTags"
                      >
                        <div
                          class="InputWithIdentifier--txtNameContainer TextInput--main"
                        >
                          <div
                            class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                          >
                            <div
                              class="Text--withDocsTooltip"
                              data-tooltip-id="universalInputNameWithId"
                            >
                              <p
                                class="StyledProps--font StyledProps--main"
                              >
                                Id
                              </p>
                            </div>
                            <p
                              class="StyledProps--font StyledProps--main"
                            >
                              :
                            </p>
                            <span
                              class="bp3-popover-wrapper"
                            >
                              <span
                                class="bp3-popover-target"
                              >
                                <div
                                  class="bp3-editable-text InputWithIdentifier--idValue"
                                  tabindex="0"
                                >
                                  <span
                                    class="bp3-editable-text-content"
                                    style="height: 1px; line-height: 1px; min-width: 0;"
                                  >
                                    templatename
                                  </span>
                                </div>
                              </span>
                            </span>
                            <span
                              class="bp3-icon StyledProps--main"
                              data-icon="Edit"
                              style="vertical-align: middle; cursor: pointer;"
                            >
                              <svg
                                height="12"
                                viewBox="0 0 16 16"
                                width="12"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                />
                                <path
                                  clip-rule="evenodd"
                                  d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                  opacity="0.3"
                                />
                              </svg>
                            </span>
                          </div>
                          <div
                            class="bp3-form-group"
                            data-id="name-0"
                          >
                            <label
                              class="bp3-label"
                              for="name"
                            >
                              <span
                                class="Tooltip--acenter"
                                data-tooltip-id="createStepTemplate_name"
                              >
                                name
                              </span>
                               
                              <span
                                class="bp3-text-muted"
                              />
                            </label>
                            <div
                              class="bp3-form-content"
                            >
                              <div
                                class="bp3-input-group"
                              >
                                <input
                                  autocomplete="off"
                                  class="bp3-input"
                                  name="name"
                                  placeholder="templatesLibrary.createNewModal.namePlaceholder"
                                  type="text"
                                  value="templatename"
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="StyledProps--font StyledProps--main"
                        >
                          <label
                            class="Label--main bp3-label descriptionLabel"
                            data-tooltip-id="createStepTemplate_description"
                          >
                            optionalField
                            <span
                              class="bp3-icon StyledProps--main editOpen"
                              data-icon="Edit"
                              data-name="edit"
                              data-testid="description-edit"
                            >
                              <svg
                                height="12"
                                viewBox="0 0 16 16"
                                width="12"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                />
                                <path
                                  clip-rule="evenodd"
                                  d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                  opacity="0.3"
                                />
                              </svg>
                            </span>
                          </label>
                        </div>
                        <div
                          class="StyledProps--font StyledProps--main"
                        >
                          <label
                            class="Label--main bp3-label descriptionLabel"
                            data-tooltip-id="createStepTemplate_tags"
                          >
                            optionalField
                            <span
                              class="bp3-icon StyledProps--main editOpen"
                              data-icon="Edit"
                              data-name="edit"
                              data-testid="tags-edit"
                            >
                              <svg
                                height="12"
                                viewBox="0 0 16 16"
                                width="12"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                />
                                <path
                                  clip-rule="evenodd"
                                  d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                  opacity="0.3"
                                />
                              </svg>
                            </span>
                          </label>
                        </div>
                      </div>
                      <div
                        class="bp3-form-group gitFormFieldWidth"
                        data-id="versionLabel-1"
                      >
                        <label
                          class="bp3-label"
                          for="versionLabel"
                        >
                          <span
                            class="Tooltip--acenter"
                            data-tooltip-id="createStepTemplate_versionLabel"
                          >
                            common.versionLabel
                          </span>
                           
                          <span
                            class="bp3-text-muted"
                          />
                        </label>
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="bp3-input-group"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              name="versionLabel"
                              placeholder="common.template.createNewModal.versionPlaceholder"
                              type="text"
                              value="v1"
                            />
                          </div>
                        </div>
                      </div>
                      <div
                        class="bp3-form-group logoInputGroup"
                        data-id="iconFile-2"
                      >
                        <label
                          class="bp3-label"
                          for="iconFile"
                        >
                          <span
                            class="Tooltip--acenter"
                            data-tooltip-id="createStepTemplate_iconFile"
                          >
                            templatesLibrary.createNewModal.logo common.optionalLabel
                          </span>
                           
                          <span
                            class="bp3-text-muted"
                          />
                        </label>
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="logoInput"
                          >
                            <input
                              accept="image/jpg,image/jpeg,image/png,image/svg+xml"
                              name="iconFile"
                              style="display: none;"
                              type="file"
                            />
                            <span
                              class="bp3-icon StyledProps--main icon"
                              data-icon="upload-box"
                            >
                              <svg
                                fill="none"
                                height="32"
                                viewBox="0 0 16 16"
                                width="32"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M5.333 8.334l2.668-2.667L8 13.334V5.667l2.67 2.667"
                                  stroke="currentColor"
                                  stroke-linecap="round"
                                  stroke-linejoin="round"
                                />
                                <path
                                  d="M3.333 6V3.333h9.334V6"
                                  stroke="currentColor"
                                  stroke-linecap="round"
                                  stroke-linejoin="round"
                                />
                              </svg>
                            </span>
                          </div>
                          <div
                            class="bp3-form-helper-text"
                          >
                            <div
                              class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main"
                            >
                              <span
                                class="bp3-icon StyledProps--main"
                                data-icon="info"
                              >
                                <svg
                                  height="16"
                                  viewBox="0 0 12 12"
                                  width="16"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M0 6a6 6 0 1012 0A6 6 0 000 6zm.75 0a5.25 5.25 0 1010.5 0A5.25 5.25 0 00.75 6zm4.206 3.104v.646h2.682v-.646l-.836-.144V4.203H4.956v.65l.836.144V8.96l-.836.144zm1.846-7.352v1.03h-1.01v-1.03h1.01z"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </span>
                              <p
                                class="StyledProps--font StyledProps--main StyledProps--font-size-small StyledProps--color StyledProps--color-grey800"
                              >
                                templatesLibrary.createNewModal.logoHelpText
                              </p>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="StyledProps--font StyledProps--main"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-alignItems-flex-end StyledProps--flex-justifyContent-flex-start"
                >
                  <button
                    aria-label="start"
                    class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
                    type="submit"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      start
                    </span>
                  </button>
                  <button
                    aria-label="cancel"
                    class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-tertiary"
                    type="button"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      cancel
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
    </div>
    <div
      class="Layout--horizontal StyledProps--main preview StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-center StyledProps--padding-top-huge StyledProps--padding-bottom-huge"
    >
      <div
        class="StyledProps--font StyledProps--main container"
      >
        <div
          class="bp3-card bp3-elevation-0 Card--card templateCard"
        >
          <div />
          <div
            class="StyledProps--font StyledProps--main StyledProps--margin-right-small"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--margin-bottom-small StyledProps--flex"
            >
              <span
                class="bp3-icon bp3-icon-disable StyledProps--main"
                icon="disable"
              >
                <svg
                  data-icon="disable"
                  height="24"
                  viewBox="0 0 20 20"
                  width="24"
                >
                  <desc>
                    disable
                  </desc>
                  <path
                    d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zM2 10c0-4.42 3.58-8 8-8 1.85 0 3.55.63 4.9 1.69L3.69 14.9A7.902 7.902 0 012 10zm8 8c-1.85 0-3.55-.63-4.9-1.69L16.31 5.1A7.902 7.902 0 0118 10c0 4.42-3.58 8-8 8z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main"
          >
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey800"
              data-testid="templatename"
              style="--text-line-clamp: 1;"
            >
              templatename
            </p>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-small StyledProps--color StyledProps--color-grey400 StyledProps--margin-top-xsmall"
              style="--text-line-clamp: 1;"
            >
              idLabel
            </p>
          </div>
          <div
            class="StyledProps--font StyledProps--main"
          >
            <span
              class="Tag--main"
            >
              <span
                class="bp3-tag scopeLabel account"
              >
                <span
                  class="bp3-text-overflow-ellipsis bp3-fill"
                >
                  SCOPE: ACCOUNT
                </span>
              </span>
            </span>
          </div>
          <div
            class="StyledProps--font StyledProps--main StyledProps--background-grey100"
            style="height: 1px;"
          />
          <div
            class="StyledProps--font StyledProps--main"
          >
            <span
              class="Tag--main"
            >
              <span
                class="bp3-tag version"
              >
                <span
                  class="bp3-text-overflow-ellipsis bp3-fill"
                >
                  v1
                </span>
              </span>
            </span>
          </div>
          <div
            class="StyledProps--font StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-center StyledProps--padding-top-medium"
          >
            <div
              class="css-12eylzo"
              fill="#EADEFF"
              stroke="#E1D0FF"
              width="100"
            >
              <div>
                <p
                  class="StyledProps--font StyledProps--main text absolutePos"
                  style="color: rgb(89, 43, 170);"
                >
                  STEP
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main closeIcon Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-cross StyledProps--main StyledProps--color StyledProps--color-grey500"
        icon="cross"
      >
        <svg
          data-icon="cross"
          height="24"
          viewBox="0 0 20 20"
          width="24"
        >
          <desc>
            cross
          </desc>
          <path
            d="M11.41 10l4.29-4.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L10 8.59l-4.29-4.3a1.003 1.003 0 00-1.42 1.42L8.59 10 4.3 14.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4.29-4.3 4.29 4.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L11.41 10z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`Git experience git experience snapshot 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main"
  >
    <div
      class="StyledProps--font StyledProps--main basicDetails gitBasicDetails StyledProps--background-form StyledProps--padding-huge"
      style="width: 55%;"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey800 StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--margin-bottom-xlarge"
      >
        Some Title
      </p>
      <div
        class="OverlaySpinner--overlaySpinner"
      >
        <form
          action="#"
          class="FormikForm--main"
        >
          <div>
            <div
              class="Layout--vertical Layout--layout-spacing-huge StyledProps--main"
            >
              <div
                class="StyledProps--font StyledProps--main gitFormWrapper"
              >
                <div
                  class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
                >
                  <div
                    class="StyledProps--font StyledProps--main"
                  >
                    <div
                      class="Layout--vertical StyledProps--main"
                    >
                      <div
                        class="StyledProps--font StyledProps--main main nameIdDescriptionTags"
                      >
                        <div
                          class="InputWithIdentifier--txtNameContainer TextInput--main"
                        >
                          <div
                            class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                          >
                            <div
                              class="Text--withDocsTooltip"
                              data-tooltip-id="universalInputNameWithId"
                            >
                              <p
                                class="StyledProps--font StyledProps--main"
                              >
                                Id
                              </p>
                            </div>
                            <p
                              class="StyledProps--font StyledProps--main"
                            >
                              :
                            </p>
                            <span
                              class="bp3-popover-wrapper"
                            >
                              <span
                                class="bp3-popover-target"
                              >
                                <div
                                  class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                                  tabindex="0"
                                >
                                  <span
                                    class="bp3-editable-text-content"
                                    style="height: 1px; line-height: 1px; min-width: 0;"
                                  />
                                </div>
                              </span>
                            </span>
                            <span
                              class="bp3-icon StyledProps--main"
                              data-icon="Edit"
                              style="vertical-align: middle; cursor: pointer;"
                            >
                              <svg
                                height="12"
                                viewBox="0 0 16 16"
                                width="12"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                />
                                <path
                                  clip-rule="evenodd"
                                  d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                  opacity="0.3"
                                />
                              </svg>
                            </span>
                          </div>
                          <div
                            class="bp3-form-group"
                            data-id="name-0"
                          >
                            <label
                              class="bp3-label"
                              for="name"
                            >
                              <span
                                class="Tooltip--acenter"
                                data-tooltip-id="createStepTemplate_name"
                              >
                                name
                              </span>
                               
                              <span
                                class="bp3-text-muted"
                              />
                            </label>
                            <div
                              class="bp3-form-content"
                            >
                              <div
                                class="bp3-input-group"
                              >
                                <input
                                  autocomplete="off"
                                  class="bp3-input"
                                  name="name"
                                  placeholder="templatesLibrary.createNewModal.namePlaceholder"
                                  type="text"
                                  value=""
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="StyledProps--font StyledProps--main"
                        >
                          <label
                            class="Label--main bp3-label descriptionLabel"
                            data-tooltip-id="createStepTemplate_description"
                          >
                            optionalField
                            <span
                              class="bp3-icon StyledProps--main editOpen"
                              data-icon="Edit"
                              data-name="edit"
                              data-testid="description-edit"
                            >
                              <svg
                                height="12"
                                viewBox="0 0 16 16"
                                width="12"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                />
                                <path
                                  clip-rule="evenodd"
                                  d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                  opacity="0.3"
                                />
                              </svg>
                            </span>
                          </label>
                        </div>
                        <div
                          class="StyledProps--font StyledProps--main"
                        >
                          <label
                            class="Label--main bp3-label descriptionLabel"
                            data-tooltip-id="createStepTemplate_tags"
                          >
                            optionalField
                            <span
                              class="bp3-icon StyledProps--main editOpen"
                              data-icon="Edit"
                              data-name="edit"
                              data-testid="tags-edit"
                            >
                              <svg
                                height="12"
                                viewBox="0 0 16 16"
                                width="12"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                />
                                <path
                                  clip-rule="evenodd"
                                  d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                  opacity="0.3"
                                />
                              </svg>
                            </span>
                          </label>
                        </div>
                      </div>
                      <div
                        class="bp3-form-group gitFormFieldWidth"
                        data-id="versionLabel-1"
                      >
                        <label
                          class="bp3-label"
                          for="versionLabel"
                        >
                          <span
                            class="Tooltip--acenter"
                            data-tooltip-id="createStepTemplate_versionLabel"
                          >
                            common.versionLabel
                          </span>
                           
                          <span
                            class="bp3-text-muted"
                          />
                        </label>
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="bp3-input-group"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              name="versionLabel"
                              placeholder="common.template.createNewModal.versionPlaceholder"
                              type="text"
                              value="v1"
                            />
                          </div>
                        </div>
                      </div>
                      <div
                        class="bp3-form-group logoInputGroup"
                        data-id="iconFile-2"
                      >
                        <label
                          class="bp3-label"
                          for="iconFile"
                        >
                          <span
                            class="Tooltip--acenter"
                            data-tooltip-id="createStepTemplate_iconFile"
                          >
                            templatesLibrary.createNewModal.logo common.optionalLabel
                          </span>
                           
                          <span
                            class="bp3-text-muted"
                          />
                        </label>
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="logoInput"
                          >
                            <input
                              accept="image/jpg,image/jpeg,image/png,image/svg+xml"
                              name="iconFile"
                              style="display: none;"
                              type="file"
                            />
                            <span
                              class="bp3-icon StyledProps--main icon"
                              data-icon="upload-box"
                            >
                              <svg
                                fill="none"
                                height="32"
                                viewBox="0 0 16 16"
                                width="32"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M5.333 8.334l2.668-2.667L8 13.334V5.667l2.67 2.667"
                                  stroke="currentColor"
                                  stroke-linecap="round"
                                  stroke-linejoin="round"
                                />
                                <path
                                  d="M3.333 6V3.333h9.334V6"
                                  stroke="currentColor"
                                  stroke-linecap="round"
                                  stroke-linejoin="round"
                                />
                              </svg>
                            </span>
                          </div>
                          <div
                            class="bp3-form-helper-text"
                          >
                            <div
                              class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main"
                            >
                              <span
                                class="bp3-icon StyledProps--main"
                                data-icon="info"
                              >
                                <svg
                                  height="16"
                                  viewBox="0 0 12 12"
                                  width="16"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M0 6a6 6 0 1012 0A6 6 0 000 6zm.75 0a5.25 5.25 0 1010.5 0A5.25 5.25 0 00.75 6zm4.206 3.104v.646h2.682v-.646l-.836-.144V4.203H4.956v.65l.836.144V8.96l-.836.144zm1.846-7.352v1.03h-1.01v-1.03h1.01z"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </span>
                              <p
                                class="StyledProps--font StyledProps--main StyledProps--font-size-small StyledProps--color StyledProps--color-grey800"
                              >
                                templatesLibrary.createNewModal.logoHelpText
                              </p>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="bp3-divider"
                  />
                  <p
                    class="StyledProps--font StyledProps--main choosePipelineSetupHeader StyledProps--font-variation-h6"
                  >
                    templatesLibrary.chooseTemplateSetupHeader
                  </p>
                  <div
                    class="inlineRemoteWrapper"
                  >
                    <div
                      class="bp3-card bp3-interactive bp3-elevation-0 Card--card Card--interactive"
                      data-index="0"
                      tabindex="0"
                    >
                      <div
                        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex"
                      >
                        <span
                          class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey600"
                          data-icon="repository"
                        >
                          <svg
                            height="16"
                            viewBox="0 0 13 14"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M12.438 2.452l-.006-.017a.367.367 0 00-.067-.114l-.004-.007L10.409.125a.374.374 0 00-.28-.125H2.327a.376.376 0 00-.28.125L.095 2.314l-.005.008a.374.374 0 00-.066.113l-.006.017a.37.37 0 00-.018.11v11.064c0 .206.168.374.374.374h11.707a.375.375 0 00.375-.374V2.563a.369.369 0 00-.018-.111zm-7.91 7.86h3.4v.357a.318.318 0 01-.318.318H4.846a.318.318 0 01-.318-.318v-.357zM.75 9.563V6.625h3.03v.357c0 .588.479 1.066 1.067 1.066H7.61c.588 0 1.066-.478 1.066-1.066v-.357h3.03v2.938H.75zm3.03-6.626v.357c0 .588.479 1.067 1.067 1.067H7.61c.589 0 1.067-.479 1.067-1.067v-.357h3.03v2.939H.75V2.937h3.03zm4.15 0v.357a.318.318 0 01-.318.318H4.846a.318.318 0 01-.318-.318v-.357h3.4zm-3.4 3.688h3.4v.357a.318.318 0 01-.319.317H4.846a.317.317 0 01-.318-.317v-.357zM2.493.749h7.468l1.284 1.44H1.21L2.494.748zm9.213 12.502H.75v-2.939h3.03v.357c0 .589.479 1.067 1.067 1.067H7.61c.588 0 1.066-.478 1.066-1.067v-.357h3.03v2.94z"
                              fill="currentColor"
                            />
                          </svg>
                        </span>
                        <div
                          class="StyledProps--font StyledProps--main"
                        >
                          <p
                            class="StyledProps--font StyledProps--main StyledProps--font-variation-form-title StyledProps--color StyledProps--color-grey800"
                          >
                            inline
                          </p>
                          <p
                            class="StyledProps--font StyledProps--main"
                          >
                            common.git.inlineStoreLabel
                          </p>
                        </div>
                      </div>
                    </div>
                    <div
                      class="bp3-card bp3-interactive bp3-elevation-0 Card--card Card--selected Card--interactive"
                      data-index="1"
                      tabindex="0"
                    >
                      <span
                        class="Card--corner"
                      >
                        <span
                          class="Card--badge"
                        />
                        <span
                          class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-white"
                          data-icon="main-tick"
                        >
                          <svg
                            height="10"
                            viewBox="0 0 11 8"
                            width="10"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M9.219.894c.356-.38.982-.413 1.398-.072.391.32.457.857.167 1.236l-.06.07-5.138 5.486c-.362.386-.993.41-1.403.068l-.07-.064-3.2-3.214A.88.88 0 01.95 3.098a1.045 1.045 0 011.328-.003l.074.067 2.443 2.454L9.22.894z"
                              fill="currentColor"
                            />
                          </svg>
                        </span>
                      </span>
                      <div
                        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex"
                      >
                        <span
                          class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-primary7"
                          data-icon="remote-setup"
                        >
                          <svg
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M2.524 9.99a7.475 7.475 0 0114.95 0 .325.325 0 00.65 0 8.125 8.125 0 10-8.125 8.125.325.325 0 000-.65A7.475 7.475 0 012.524 9.99zm4.065-.303c0-.18.146-.325.325-.325H9.37V6.905a.325.325 0 11.65 0v2.457h2.457a.325.325 0 110 .65H10.02v2.456a.325.325 0 11-.65 0v-2.456H6.914a.325.325 0 01-.325-.325z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                            <path
                              d="M18.765 13.285l-2.047-2.05a2.332 2.332 0 00-.846-.511c-.7-.233-1.396-.051-1.96.512l-2.051 2.049c-.23.242-.404.531-.512.847-.233.7-.052 1.395.512 1.958l2.05 2.05c.241.229.53.403.845.511.191.065.392.098.593.099.492 0 .962-.208 1.366-.61l2.049-2.05c.23-.242.404-.531.512-.847.233-.7.051-1.394-.512-1.958h.001zm-3.294-1.455c.154.05.297.131.418.24l.606.606-1.181 1.18-1.18-1.18.608-.61c.163-.163.394-.335.73-.237l-.001.001zm-3.014 2.699c.05-.155.132-.298.24-.419l.606-.605 1.181 1.18-1.182 1.181-.608-.61c-.164-.162-.336-.392-.238-.729l.001.002zm2.699 3.013a1.145 1.145 0 01-.419-.24l-.604-.598 1.181-1.182 1.18 1.181-.608.61c-.163.162-.393.335-.73.236v-.007zm3.015-2.692c-.05.154-.132.297-.24.418l-.605.598-1.181-1.18 1.18-1.181.61.608c.163.163.335.393.237.73"
                              fill="currentColor"
                            />
                          </svg>
                        </span>
                        <div
                          class="StyledProps--font StyledProps--main"
                        >
                          <p
                            class="StyledProps--font StyledProps--main StyledProps--font-variation-form-title StyledProps--color StyledProps--color-primary7"
                          >
                            remote
                          </p>
                          <p
                            class="StyledProps--font StyledProps--main"
                          >
                            common.git.remoteStoreLabel
                          </p>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main gitSyncForm StyledProps--padding-top-large"
                  >
                    <div
                      class="Layout--horizontal StyledProps--main"
                    >
                      <div
                        class="Layout--vertical StyledProps--main"
                      >
                        <div
                          class="bp3-form-group"
                          data-id="null-3"
                        >
                          <label
                            class="bp3-label"
                          >
                            <span
                              class="Tooltip--acenter"
                              data-tooltip-id="createStepTemplate_connectorRef"
                            >
                              connectors.title.gitConnector
                            </span>
                             
                            <span
                              class="bp3-text-muted"
                            />
                          </label>
                          <div
                            class="bp3-form-content"
                          >
                            <button
                              class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow Button--withRightIcon"
                              data-testid="cr-field-connectorRef"
                              style="width: 350px;"
                              type="button"
                            >
                              <span
                                class="bp3-button-text"
                              >
                                <div
                                  class="Layout--horizontal Layout--layout-spacing-small StyledProps--main selectWrapper StyledProps--flex StyledProps--flex-distribution-space-between"
                                >
                                  <p
                                    class="StyledProps--font StyledProps--main label StyledProps--color StyledProps--color-grey800"
                                  />
                                  <div
                                    class="rightStatus"
                                  >
                                    <span
                                      class="bp3-icon bp3-icon-full-circle StyledProps--main status redStatus"
                                      data-testid="crf-status"
                                      icon="full-circle"
                                    >
                                      <svg
                                        data-icon="full-circle"
                                        height="6"
                                        viewBox="0 0 16 16"
                                        width="6"
                                      >
                                        <desc>
                                          full-circle
                                        </desc>
                                        <path
                                          d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                                          fill-rule="evenodd"
                                        />
                                      </svg>
                                    </span>
                                    <span
                                      class="Tag--main"
                                    >
                                      <span
                                        class="bp3-tag bp3-minimal"
                                        id="tag"
                                      >
                                        <span
                                          class="bp3-text-overflow-ellipsis bp3-fill"
                                        >
                                          project
                                        </span>
                                      </span>
                                    </span>
                                  </div>
                                </div>
                              </span>
                              <span
                                class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                                icon="chevron-down"
                              >
                                <svg
                                  data-icon="chevron-down"
                                  height="14"
                                  viewBox="0 0 16 16"
                                  width="14"
                                >
                                  <desc>
                                    chevron-down
                                  </desc>
                                  <path
                                    d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </span>
                            </button>
                          </div>
                        </div>
                        <div
                          class="Layout--horizontal StyledProps--main"
                        >
                          <div
                            class="bp3-form-group"
                            data-id="repo-4"
                          >
                            <label
                              class="bp3-label"
                              for="repo"
                            >
                              <span
                                class="Tooltip--acenter"
                                data-tooltip-id="createStepTemplate_repo"
                              >
                                repository
                              </span>
                               
                              <span
                                class="bp3-text-muted"
                              />
                            </label>
                            <div
                              class="bp3-form-content"
                            >
                              <div
                                class="bp3-popover-wrapper Select--main bp3-fill"
                              >
                                <div
                                  class="bp3-popover-target"
                                >
                                  <div
                                    class="bp3-input-group"
                                  >
                                    <input
                                      autocomplete="off"
                                      class="bp3-input"
                                      name="repo"
                                      placeholder="- common.git.selectRepositoryPlaceholder -"
                                      style="padding-right: 0px;"
                                      type="text"
                                      value="repoNameTest"
                                    />
                                    <span
                                      class="bp3-input-action"
                                    >
                                      <span
                                        class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                                        icon="chevron-down"
                                      >
                                        <svg
                                          data-icon="chevron-down"
                                          height="14"
                                          viewBox="0 0 16 16"
                                          width="14"
                                        >
                                          <desc>
                                            chevron-down
                                          </desc>
                                          <path
                                            d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                            fill-rule="evenodd"
                                          />
                                        </svg>
                                      </span>
                                    </span>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="Layout--horizontal StyledProps--main"
                        >
                          <div
                            class="bp3-form-group branchSelector"
                            data-id="branch-5"
                          >
                            <label
                              class="bp3-label"
                              for="branch"
                            >
                              <span
                                class="Tooltip--acenter"
                                data-tooltip-id="createStepTemplate_branch"
                              >
                                gitBranch
                              </span>
                               
                              <span
                                class="bp3-text-muted"
                              />
                            </label>
                            <div
                              class="bp3-form-content"
                            >
                              <div
                                class="bp3-popover-wrapper Select--main bp3-fill"
                              >
                                <div
                                  class="bp3-popover-target"
                                >
                                  <div
                                    class="bp3-input-group"
                                  >
                                    <input
                                      autocomplete="off"
                                      class="bp3-input"
                                      name="branch"
                                      placeholder="- common.git.selectBranchPlaceholder -"
                                      style="padding-right: 0px;"
                                      type="text"
                                      value="branchTest"
                                    />
                                    <span
                                      class="bp3-input-action"
                                    >
                                      <span
                                        class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                                        icon="chevron-down"
                                      >
                                        <svg
                                          data-icon="chevron-down"
                                          height="14"
                                          viewBox="0 0 16 16"
                                          width="14"
                                        >
                                          <desc>
                                            chevron-down
                                          </desc>
                                          <path
                                            d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                            fill-rule="evenodd"
                                          />
                                        </svg>
                                      </span>
                                    </span>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="bp3-form-group"
                          data-id="filePath-6"
                        >
                          <label
                            class="bp3-label"
                            for="filePath"
                          >
                            <span
                              class="Tooltip--acenter"
                              data-tooltip-id="createStepTemplate_filePath"
                            >
                              gitsync.gitSyncForm.yamlPathLabel
                            </span>
                             
                            <span
                              class="bp3-text-muted"
                            />
                          </label>
                          <div
                            class="bp3-form-content"
                          >
                            <div
                              class="bp3-input-group"
                            >
                              <input
                                autocomplete="off"
                                class="bp3-input"
                                name="filePath"
                                placeholder="gitsync.gitSyncForm.enterYamlPath"
                                type="text"
                                value=".harness/filePathTest.yaml"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="StyledProps--font StyledProps--main"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-alignItems-flex-end StyledProps--flex-justifyContent-flex-start"
                >
                  <button
                    aria-label="start"
                    class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
                    type="submit"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      start
                    </span>
                  </button>
                  <button
                    aria-label="cancel"
                    class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-tertiary"
                    type="button"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      cancel
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
    </div>
    <div
      class="Layout--horizontal StyledProps--main preview StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-center StyledProps--padding-top-huge StyledProps--padding-bottom-huge"
    >
      <div
        class="StyledProps--font StyledProps--main container"
      >
        <div
          class="bp3-card bp3-elevation-0 Card--card templateCard"
        >
          <div />
          <div
            class="StyledProps--font StyledProps--main StyledProps--margin-right-small"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--margin-bottom-small StyledProps--flex"
            >
              <span
                class="bp3-icon bp3-icon-disable StyledProps--main"
                icon="disable"
              >
                <svg
                  data-icon="disable"
                  height="24"
                  viewBox="0 0 20 20"
                  width="24"
                >
                  <desc>
                    disable
                  </desc>
                  <path
                    d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zM2 10c0-4.42 3.58-8 8-8 1.85 0 3.55.63 4.9 1.69L3.69 14.9A7.902 7.902 0 012 10zm8 8c-1.85 0-3.55-.63-4.9-1.69L16.31 5.1A7.902 7.902 0 0118 10c0 4.42-3.58 8-8 8z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main"
          >
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey400"
              style="--text-line-clamp: 1;"
            >
              templatesLibrary.createNewModal.namePlaceholder
            </p>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-small StyledProps--color StyledProps--color-grey400 StyledProps--margin-top-xsmall"
              style="--text-line-clamp: 1;"
            >
              idLabel
            </p>
          </div>
          <div
            class="StyledProps--font StyledProps--main"
          >
            <span
              class="Tag--main"
            >
              <span
                class="bp3-tag scopeLabel account"
              >
                <span
                  class="bp3-text-overflow-ellipsis bp3-fill"
                >
                  SCOPE: ACCOUNT
                </span>
              </span>
            </span>
          </div>
          <div
            class="StyledProps--font StyledProps--main StyledProps--background-grey100"
            style="height: 1px;"
          />
          <div
            class="StyledProps--font StyledProps--main infoContainer"
          >
            <div
              class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-flex-start"
            >
              <p
                class="StyledProps--font StyledProps--main label StyledProps--font-small StyledProps--color StyledProps--color-grey700"
                style="width: 80px;"
              >
                pipeline.gitRepo
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
                style="align-items: center;"
              >
                <span
                  class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey600"
                  data-icon="repository"
                >
                  <svg
                    height="10"
                    viewBox="0 0 13 14"
                    width="10"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12.438 2.452l-.006-.017a.367.367 0 00-.067-.114l-.004-.007L10.409.125a.374.374 0 00-.28-.125H2.327a.376.376 0 00-.28.125L.095 2.314l-.005.008a.374.374 0 00-.066.113l-.006.017a.37.37 0 00-.018.11v11.064c0 .206.168.374.374.374h11.707a.375.375 0 00.375-.374V2.563a.369.369 0 00-.018-.111zm-7.91 7.86h3.4v.357a.318.318 0 01-.318.318H4.846a.318.318 0 01-.318-.318v-.357zM.75 9.563V6.625h3.03v.357c0 .588.479 1.066 1.067 1.066H7.61c.588 0 1.066-.478 1.066-1.066v-.357h3.03v2.938H.75zm3.03-6.626v.357c0 .588.479 1.067 1.067 1.067H7.61c.589 0 1.067-.479 1.067-1.067v-.357h3.03v2.939H.75V2.937h3.03zm4.15 0v.357a.318.318 0 01-.318.318H4.846a.318.318 0 01-.318-.318v-.357h3.4zm-3.4 3.688h3.4v.357a.318.318 0 01-.319.317H4.846a.317.317 0 01-.318-.317v-.357zM2.493.749h7.468l1.284 1.44H1.21L2.494.748zm9.213 12.502H.75v-2.939h3.03v.357c0 .589.479 1.067 1.067 1.067H7.61c.588 0 1.066-.478 1.066-1.067v-.357h3.03v2.94z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-size-small StyledProps--color StyledProps--color-black"
                  style="--text-line-clamp: 1; width: 40px;"
                  title="repoNameTest"
                >
                  repoNameTest
                </p>
              </div>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main StyledProps--background-grey100"
            style="height: 1px;"
          />
          <div
            class="StyledProps--font StyledProps--main"
          >
            <span
              class="Tag--main"
            >
              <span
                class="bp3-tag version"
              >
                <span
                  class="bp3-text-overflow-ellipsis bp3-fill"
                >
                  v1
                </span>
              </span>
            </span>
          </div>
          <div
            class="StyledProps--font StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-center StyledProps--padding-top-medium"
          >
            <div
              class="css-12eylzo"
              fill="#EADEFF"
              stroke="#E1D0FF"
              width="100"
            >
              <div>
                <p
                  class="StyledProps--font StyledProps--main text absolutePos"
                  style="color: rgb(89, 43, 170);"
                >
                  STEP
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main closeIcon Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-cross StyledProps--main StyledProps--color StyledProps--color-grey500"
        icon="cross"
      >
        <svg
          data-icon="cross"
          height="24"
          viewBox="0 0 20 20"
          width="24"
        >
          <desc>
            cross
          </desc>
          <path
            d="M11.41 10l4.29-4.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L10 8.59l-4.29-4.3a1.003 1.003 0 00-1.42 1.42L8.59 10 4.3 14.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4.29-4.3 4.29 4.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L11.41 10z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;
